[FIX] overlay cropp and autocropp

--- a/src/app/counter/consumption-counter/consumption-counter.page.scss
+++ b/src/app/counter/consumption-counter/consumption-counter.page.scss
@@ -17,13 +17,23 @@ body {
 .camera-overlay {
   position: absolute;
 }
+// .overlay {
+//   position: absolute;
+//   width: 100%;
+//   height: 100%;
+//   z-index: 10;
+// }
+
 .overlay {
   position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 10;
+  border: 1px solid #fff; // ou toute autre couleur
+  background: rgba(255,255,255,0.3); // ou toute autre couleur
+  top: 100px!important;
+  left:50px!important;
+  width: 300px!important;
+  height:200px!important;
+  z-index: 10!important;
 }
-
 .cameraPreview {
   width: 100%;
   height: 60%; 
